--- a/investigacion.tex
+++ b/investigacion.tex
@@ -132,13 +132,13 @@ En cuanto al concepto de mecánica cuántica no discutiremos a profundidad los p
 
 Con este postulado, podríamos decir que tenemos la base para comprender el concepto de los qubits. Pero en general, ¿qué es la mecánica cuántica? Nielsen y Chuang (2010) la definen como: ‘‘(...)un marco matemático o un conjunto de reglas para la construcción de teorías de la física.’’ (p. 2). Nos parece contextualmente comprensible la analogía que plantean estos autores. En esta, comparan la relación que tiene la mecánica cuántica y las teorías que derivan de ella con un sistema operativo y sus aplicaciones de software (p. 2). Como vemos entre ambas relaciones hay una conexión de base, donde el primer concepto sirve de fundamento para que se creen los elementos con los cuales se relacionan.
 
-Incluso yendo más allá de una simple definición y contexto histórico Nielsen y Chuang (2010) se atreven, luego de hacer una línea de tiempo en el desarrollo de la mecánica cuántica, a proponerla como un reto para la computación. Ellos exponen los inicios de esta nueva forma de ver la física, que se remontan a las años 20 hasta los hallazgos más destacables que datan desde los años 70 hasta la actualidad. Luego, hace una reflexión acerca de que los intentos por desarrollar nuevos hallazgos científicados, aunque sea por mera corazonada, han dado nacimiento a importantes descubrimientos en la historia de la humanidad. Es aquí donde ellos recalcan que la computación e informática cuántica caben a la perfección en este esquema de resolver retos propuestos por nuevos esquemas de conocimiento. (pp. 2-3)
+Incluso yendo más allá de una simple definición y contexto histórico Nielsen y Chuang (2010) se atreven, luego de hacer una línea de tiempo en el desarrollo de la mecánica cuántica, a proponerla como un reto para la computación. Ellos exponen los inicios de esta nueva forma de ver la física, que se remontan a las años 20 hasta los hallazgos más destacables que datan desde los años 70 hasta la actualidad. Luego, hace una reflexión acerca de que los intentos por desarrollar nuevos hallazgos científicos, aunque sea por mera corazonada, han dado nacimiento a importantes descubrimientos en la historia de la humanidad. Es aquí donde ellos recalcan que la computación e informática cuántica caben a la perfección en este esquema de resolver retos propuestos por nuevos esquemas de conocimiento. (pp. 2-3)
 
 Entonces, el desarrollo de la mecánica cuántica en las ciencias de la computación puede representar un inmenso avance en el desarrollo de soluciones para los problemas propios de este ciencia. 
 
 Para poner un ejemplo, vamos a retroceder un momento en la historia y remontemos sobre los inicios de la computación. Si nos colocamos en los antecedentes de las primeras computadoras electrónicas tenemos el gran aporte de Alan Turing. Turing (1936) propone el concepto de una máquina que es capaz de interpretar un número finito de instrucciones llamadas "m-configurations". Esta máquina será alimentada por una cinta seccionada que va a contener el conjunto de instrucciones que se desean que la máquina interprete y como resultado imprimirá en otra cinta los resultados de las instrucciones que la máquina va a interpretar. (p. 232). Solo para recalcar la importancia del trabajo de Turing, Herken (1998) afirma que: ‘‘Es bastante sorprendente ver cómo, en tan sólo diez años después de ‘‘Computable Numbers’’, había traducido sus ideas en una poderosa visión profética del potencial de la tecnología informática’’ (p. 8) 
 
-Volviendo a la línea histórica, tenemos el trabajo de Turing que mencionamos que data de 1936, seguido por el trabajo de John Von Neumann. Los aportes que Von Neumann hizo al conocimiento científico en general son muchos y en diversas áreas (incluyendo en la mecánica cuántica) pero ahora nos limitaremos a su trabajo \textit{First Draft of a Report on the EDVAC}. Incluso siendo una borrador incompleto, muestra la arquitectura de la computadora EDVAC. Esta se convirtió en la arquitectura más usada en la creación de nuevas computadoras y como base se ha mantenido hasta la actualidad. Con la invención del transistor en 1947 el desarrollo de nuevo hardware se vió impulsado y esta arquitectura obtuvo mucha más fuerza.
+Volviendo a la línea histórica, tenemos el trabajo de Turing que mencionamos que data de 1936, seguido por el trabajo de John Von Neumann. Los aportes que Von Neumann hizo al conocimiento científico en general son muchos y en diversas áreas (incluyendo en la mecánica cuántica) pero ahora nos limitaremos a su trabajo \textit{First Draft of a Report on the EDVAC}. Incluso siendo una borrador incompleto, muestra la arquitectura de la computadora EDVAC. Esta se convirtió en la arquitectura más usada en la creación de nuevas computadoras y como base se ha mantenido hasta la actualidad. Con la invención del transistor en 1947 el desarrollo de nuevo hardware se vio impulsado y esta arquitectura obtuvo mucha más fuerza.
 
 Gracias a los transistores, se comenzó el desarrollo de circuitos integrados. El experto en fisicoquímica Gordon Moore (1965) habla sobre las ventajas y los posibles usos de los circuitos integrados. Inclusive afirma que: 
 \begin{quote}
@@ -259,7 +259,7 @@ La compuerta Toffoli se puede utilizar para simular compuertas NAND. (Nielsen, 2
 
 El entrelazamiento cuántico es uno de los fenómenos más extraños y sorprendentes de la mecánica cuántica. No es un concepto nuevo, la propuesta del entrelazamiento se remonta hacia los años 30 donde la teoría cuántica comenzaba a desarrollarse. 
 
-Para hacerlo de una forma comprendible vamos a referirnos a la analogía propuesta por Aczel (2001). Esta nos propone que imaginemos que Alice y Bob están casados. Cuando Alice se va de viaje Bob conoce a Carol. Carol está casada con Dave, quién también está fuera de la ciudad. Entonces Bob y Carol se olvidan de sus esposos y se entrelazan profundamente. Por una extraña razón Alice y Dave se encuentran y ellos también se entrelazan sin siquiera saber por qué. Entonces si cambiamos las personas por partículas: A, B, C, D y si sabemos que A está entrelazada con B al igual que C con D  entonces podemos entrelazar A con D por medio de entrelazar a B con C. (p. 2)
+Para hacerlo de una forma comprensible vamos a referirnos a la analogía propuesta por Aczel (2001). Esta nos propone que imaginemos que Alice y Bob están casados. Cuando Alice se va de viaje Bob conoce a Carol. Carol está casada con Dave, quién también está fuera de la ciudad. Entonces Bob y Carol se olvidan de sus esposos y se entrelazan profundamente. Por una extraña razón Alice y Dave se encuentran y ellos también se entrelazan sin siquiera saber por qué. Entonces si cambiamos las personas por partículas: A, B, C, D y si sabemos que A está entrelazada con B al igual que C con D  entonces podemos entrelazar A con D por medio de entrelazar a B con C. (p. 2)
 
 Por tanto, si dos partículas están entrelazas, no importa cuán lejos estén siempre van a estar unidas. Hay una relación intrínseca entre las dos que no las deja separarse. El entrelazamiento viene a ser entonces una aplicación de un concepto desarrollado en el pasado llamado el \textit{principio de superposición de estados}. Aczel (2001) lo presenta como:
 \begin{quote}
@@ -280,16 +280,16 @@ El sueño de la teletransportación es el de ser capaz de viajar simplemente rea
 
 El problema de la teletransportación de una partícula cuántico bajo este esquema clásico es que no puede ser medida con precisión. Esté es el principio de incertidumbre de Heisenberg. Si una partícula es medida u observada en el momento de teletransportarse, se destruirían todos sus otros estados y la precisión de la medición es improbable. Entonces, el artículo destaca que Bennett et al. propone la posibilidad de transferir un estado cuántico de una partícula en otra sin tener que obtener información en el proceso. Proponen que esto es posible gracias al entrelazamiento. (Bouwmeester et al., 1997)
 
-Explicar el proceso por el cual se logra transferir el estado de una partícula a otro a es algo complicado. Decidimos entonces exponer una aplicación de directa de la computación cuántica en la computación e informática. Si pudieramos tranferir el estado de un qubit a otro podríamos tener un nuevo sistema de envío de datos. En el periódico \textit{The New York Times} encontramos una noticia sobre un grupo de científicos de los Países Bajos lograron teletransportar la información de un qubit a otro estando a tres metros de distancia. Este logro los motiva a continuar sus esfuerzo por lograr una teletransportación a distancias más largas. Si lo logran, este será un paso muy grande para la demostración del fenómeno del entrelazamiento y la mecánica cuántica en general. (Markoff, 2014)
+Explicar el proceso por el cual se logra transferir el estado de una partícula a otro a es algo complicado. Decidimos entonces exponer una aplicación de directa de la computación cuántica en la computación e informática. Si pudiéramos transferir el estado de un qubit a otro podríamos tener un nuevo sistema de envío de datos. En el periódico \textit{The New York Times} encontramos una noticia sobre un grupo de científicos de los Países Bajos lograron teletransportar la información de un qubit a otro estando a tres metros de distancia. Este logro los motiva a continuar sus esfuerzo por lograr una teletransportación a distancias más largas. Si lo logran, este será un paso muy grande para la demostración del fenómeno del entrelazamiento y la mecánica cuántica en general. (Markoff, 2014)
 \clearpage
 \part{D-Wave Systems}
 \section*{Historia y objetivos de D-Wave Systems}
 
 D-Wave Systems es la primera compañía privada comercial que ofrece computación cuántica. Se basa en los principios de que la computación cuántica tiene el potencial de resolver algunos de los problemas más complejos alrededor del mundo. Esperan que la computación cuántica pueda llevar a nuevos descubrimientos en ciencia, ingeniería, modelos en computación, simulación, análisis financiero, optimización, lógica...
 
-Fue fundada en 1999 por Geordie Rose, Haig Farris y Alexandre Zagoskin, que se encontraron en la Universidad de British Columbia (UBC). El nombre D-Wave viene de los primeros diseños de qubits que plantearon, que usaban superconductores de tipo d-wave. Empezó como una rama de UBC con lazos muy fuertes con el Departamento de Física y Astronomía, ya que ellos proporcionaban los fondos para investigación en la computación cuántica. El objetivo de D-Wave es integrar nuevos descubrimietos en física y computación para producir nuevos avances en la computación cuántica.
+Fue fundada en 1999 por Geordie Rose, Haig Farris y Alexandre Zagoskin, que se encontraron en la Universidad de British Columbia (UBC). El nombre D-Wave viene de los primeros diseños de qubits que plantearon, que usaban superconductores de tipo d-wave. Empezó como una rama de UBC con lazos muy fuertes con el Departamento de Física y Astronomía, ya que ellos proporcionaban los fondos para investigación en la computación cuántica. El objetivo de D-Wave es integrar nuevos descubrimientos en física y computación para producir nuevos avances en la computación cuántica.
 
-Por cinco años la companía trabajó para recopilar propiedad intelectual e ideas de cómo la computación cuántica podía volverse una realidad. Más que investigación académica, estaban enfocados en cómo diseñar las computadoras cuánticas, cuál es el proceso de manufactura y cómo se pueden producir en masa. 
+Por cinco años la compañía trabajó para recopilar propiedad intelectual e ideas de cómo la computación cuántica podía volverse una realidad. Más que investigación académica, estaban enfocados en cómo diseñar las computadoras cuánticas, cuál es el proceso de manufactura y cómo se pueden producir en masa. 
 Para el 2004, después de varios intentos de buscar opciones de terceros para construir las computadoras, tomaron la decisión de construir las computadoras ellos mismos. Construyeron sus propias facilidades para producir las partes necesarias y los procesadores que simulaban efectos cuánticos. También armaron un equipo de científicos para diseñar, fabricar y probar los procesadores en sus propios laboratorios. 
 
 En el 2010 lanzaron la primera computadora cuántica comercial, la D-Wave One, y para el 2013 lanzaron la D-Wave Two, que tiene 512 qubits. Instalaron la D-Wave Two en los laboratorios de Inteligencia Artificial Cuántica administrados por Google, NASA y USRA. 
@@ -301,17 +301,17 @@ Hoy en día es reconocida como una de las compañías pioneras en computadoras c
 
 La computadora D-Wave utiliza los principios de la mecánica cuántica para resolver problemas computacionales. Gracias a los algoritmos cuánticos es posible resolver tareas complejas en un tiempo mucho menor que con una computadora clásica. La computadora D-Wave no hace todas las operaciones que hace una normal, sino que está construida especialmente para resolver problemas de optimización. (D-Wave Systems, 2014)
 
-Entonces, ¿cúal es la diferencia entre una computadora cuántica y una computadora clásica? D-Wave Systems expone una analogía entre estas estructuras. Imaginemonos un mapa con valles y montañas. Resolver un problema de optimización sería como encontrar el punto más bajo en este mapa. Una computadora clásica utilizaría un algoritmo que recorrería todos los puntos posibles del mapa y los analiza hasta luego conseguir el mejor resultado. El procesamiento de la D-Wave es capaz de considerar todas las posibilidades al mismo tiempo y le devuelve al usuario un conjunto que incluye no solo al mejor resultado sino a otros resultados también. (D-Wave Systems, 2014)
+Entonces, ¿cúal es la diferencia entre una computadora cuántica y una computadora clásica? D-Wave Systems expone una analogía entre estas estructuras. Imaginémonos un mapa con valles y montañas. Resolver un problema de optimización sería como encontrar el punto más bajo en este mapa. Una computadora clásica utilizaría un algoritmo que recorrería todos los puntos posibles del mapa y los analiza hasta luego conseguir el mejor resultado. El procesamiento de la D-Wave es capaz de considerar todas las posibilidades al mismo tiempo y le devuelve al usuario un conjunto que incluye no solo al mejor resultado sino a otros resultados también. (D-Wave Systems, 2014)
 
-Siguiendo este ejemplo, si un usuario quisiera resolver este problema, primero expresa su problema en un lenguaje adecuado a D-Wave y se conectaría a la computadora mediante una red, como si fuera un dispositivo periférico. Luego de enviar el problema, la máquina se encarga de hacer operaciónes cuánticas para luego darle al usuario la respuesta al problema.  (D-Wave Systems, 2014)
+Siguiendo este ejemplo, si un usuario quisiera resolver este problema, primero expresa su problema en un lenguaje adecuado a D-Wave y se conectaría a la computadora mediante una red, como si fuera un dispositivo periférico. Luego de enviar el problema, la máquina se encarga de hacer operaciones cuánticas para luego darle al usuario la respuesta al problema.  (D-Wave Systems, 2014)
 
 La computadora D-Wave es capaz de resolver problemas como por ejemplo: optimización, análisis financiero, aprendizaje de máquina, reconocimiento de patrones, detección de anomalías, verificación de software y hardware, entre otras. (D-Wave Systems, 2014) Vemos que las aplicaciones son muy enriquecedoras en ciertos campos, tanto como científicos, comerciales y militares, por lo que dedicaremos un apartado más adelante a estas posibles aplicaciones.
 
 \subsection*{Hardware del D-Wave}
 
-Para hablar un poco sobre la mecánica del hardware del D-Wave vamos a referirnos a tres entornos: adentro del procesador, afuera del procesor y la máquina en general.
+Para hablar un poco sobre la mecánica del hardware del D-Wave vamos a referirnos a tres entornos: adentro del procesador, afuera del procesador y la máquina en general.
 
-En cuanto al procesador hay una singularidad importante. En una computadora clásica, la forma en la que se almacenan los bits es mediante transistores. Estos están conectados a un bus de datos y la forma en que se escriben los datos es regulando el voltaje en los transistores. En cambio, el D-Wave necesita un medio para almacenar qubits, y un transistor no se puede utilizar. Entonces, el procesador esta conformado por una unidad básica llamada SQUID. En esta estructura los electrones pueden comportarse en forma de onda, las cuales dan las propiedades y efectos cuánticos. En contraste con un transistor que está hecho de silicio, este dispositivo está hecho de niobio. Cuando este metal se enfría se transforma en un superconductor, permitiéndo que fluya en el propiedades cuánticas.(D-Wave Systems, 2014)
+En cuanto al procesador hay una singularidad importante. En una computadora clásica, la forma en la que se almacenan los bits es mediante transistores. Estos están conectados a un bus de datos y la forma en que se escriben los datos es regulando el voltaje en los transistores. En cambio, el D-Wave necesita un medio para almacenar qubits, y un transistor no se puede utilizar. Entonces, el procesador esta conformado por una unidad básica llamada SQUID. En esta estructura los electrones pueden comportarse en forma de onda, las cuales dan las propiedades y efectos cuánticos. En contraste con un transistor que está hecho de silicio, este dispositivo está hecho de niobio. Cuando este metal se enfría se transforma en un superconductor, permitiendo que fluya en el propiedades cuánticas.(D-Wave Systems, 2014)
 
 Para ser más gráficos, en la siguiente figura tenemos respectivamente un transistor CMOS y un SQUID (nombre que se le da al dispositivos que almacena quibts en el D-Wave):
 
@@ -336,7 +336,7 @@ Una vez que se tuvo diseñado el circuito del procesador y de hacer los esquemas
 
 Para construir la computadora, se toma uno de estos procesadores y se empaqueta en un sistema de circuitos que mantiene todas las conexiones. Para que este procesador funcione se necesita que se enfríe a una temperatura sumamente baja. Se requieren aproximadamente 80 mK ($-273^o$C). Esta temperatura es 150 veces más fría que el espacio interestelar, solo $0.02^o$C por encima del cero absoluto. Esta temperatura se logra usando helio como enfriador. El líquido reside en una cámara por aparte y el procesador se enfría "en seco". La refrigeración es viable y mantenible comercialmente. (D-Wave Systems, 2014)
 
-El procesador es afectado directamente por campos magnéticos, por lo que D-Wave tiene sumo cuidado con estos. La computadora crea un escudo de campos magnéticos que contrarestan en su totalidad los campos magnéticos que puedan quere atravesar el cajón donde está el procesador. (D-Wave Systems, 2014)
+El procesador es afectado directamente por campos magnéticos, por lo que D-Wave tiene sumo cuidado con estos. La computadora crea un escudo de campos magnéticos que contrarrestan en su totalidad los campos magnéticos que puedan querer atravesar el cajón donde está el procesador. (D-Wave Systems, 2014)
 
 En referencia al contenedor de la computadora, además de tener el escudo magnético tiene además una protección contra radiofrecuencias electromagnéticas. Más aún, solo hay una salida del cajón con el exterior y es un canal óptico por el cual los datos entran y los resultados salen.  (D-Wave Systems, 2014)
 
@@ -359,17 +359,17 @@ El método de conexión al D-Wave se basa en computación en nube. El D-Wave tie
 \clearpage
 \subsection*{Aplicaciones y usuarios del D-Wave}
 
-Como ya lo habíamos mencionado, el D-Wave se centra en problemas de optimización. Pero en general D-Wave Systems nos da varios ejemplos de este tipo de problemas. Por ejemplo, se podría optimizar redes de tuberías de agua. Con un software se modelan las especificaciones y la computadora se encargaría de ofrecer la mejor solución. Otro problema es el de optimizar las dosis de radioterapia en un paciente. Como esto lleva muchas variables a considerar para que el tratamiento tenga el menor impacto en el cuerpo, la capaciadad de procesamiento de la computación cuántica podría ser un gran avance.(D-Wave Systems, 2014)
+Como ya lo habíamos mencionado, el D-Wave se centra en problemas de optimización. Pero en general D-Wave Systems nos da varios ejemplos de este tipo de problemas. Por ejemplo, se podría optimizar redes de tuberías de agua. Con un software se modelan las especificaciones y la computadora se encargaría de ofrecer la mejor solución. Otro problema es el de optimizar las dosis de radioterapia en un paciente. Como esto lleva muchas variables a considerar para que el tratamiento tenga el menor impacto en el cuerpo, la capacidad de procesamiento de la computación cuántica podría ser un gran avance.(D-Wave Systems, 2014)
 
 En el campo de la ciencia tenemos el ejemplo de analizar el plegamiento de las proteínas. Con la computación cuántica se pueden explorar los posibles plegamientos que pueden tener estas moléculas. D-Wave en conjunto con investigadores de la universidad de Harvard diseñaron un sistema que predice los patrones de plegamiento de proteínas y han logrado pequeñas simulaciones. (D-Wave Systems, 2014)
 
-Con respecto a la robótica se podría usar la computación cuántica para aprender compotamiento y procesar imágenes y video. Uno de los limitantes de los programadores actualmente es la dificultad de desarrollar algoritmos que hagan que una máquina aprenda comportamientos. Como el procesamiento de grandes árboles de datos es un problema para las computadoras clásicas, la capacidad de optimización de la computación cuántica puede ser útil en este caso. (D-Wave Systems, 2014)
+Con respecto a la robótica se podría usar la computación cuántica para aprender comportamiento y procesar imágenes y vídeo. Uno de los limitantes de los programadores actualmente es la dificultad de desarrollar algoritmos que hagan que una máquina aprenda comportamientos. Como el procesamiento de grandes árboles de datos es un problema para las computadoras clásicas, la capacidad de optimización de la computación cuántica puede ser útil en este caso. (D-Wave Systems, 2014)
 
-¿Cuáles industrias podrían estar interesadas en la computación cuántica? Podríamos mencionar universidades, laboratorios, compañias financieras, compañías energéticas, defensa y militares y hasta la misma web. (D-Wave Systems, 2014)
+¿Cuáles industrias podrían estar interesadas en la computación cuántica? Podríamos mencionar universidades, laboratorios, compañías financieras, compañías energéticas, defensa y militares y hasta la misma web. (D-Wave Systems, 2014)
 
 Actualmente, D-Wave tiene clientes importantes, uno de ellos es la NASA y Google. Estos, en colaboración con la Asociación de Universidades de Investigación Espacial crearon en el 2013 el Laboratorio Cuántico de Inteligencia Artificial (QuAIL siglas en inglés). Google se centra en mejorar modelos de optimización con la computación cuántica. La NASA intenta demostrar que tanto esta como los algoritmos cuánticos pueden cambiar tareas de optimización como reconocimiento de patrones, tráfico aéreo, navegación, robótica, comunicaciones entre otros. (D-Wave Systems, 2014)
 
-El primer cliente de D-Wave fue Lockheed Martin. Es uno de los contratistas en defensa más grande del mundo. Con la D-Wave logró identificar en seis semanas un error en una pieza de código de un F-16 de hace 30 años que le tomo a su compañia meses en averiguar. Martin trabaja en Aeronaútica, Sistemas de Información y soluciones militares. Él disela systemas complejos, aunque mucho del trabajo pesado consiste en verificar y validar. El grupo de trabajo de Martin intenta reducir el costo y tiempo de este trabajo con la computación cuántica.
+El primer cliente de D-Wave fue Lockheed Martin. Es uno de los contratistas en defensa más grande del mundo. Con la D-Wave logró identificar en seis semanas un error en una pieza de código de un F-16 de hace 30 años que le tomo a su compañia meses en averiguar. Martin trabaja en Aeronaútica, Sistemas de Información y soluciones militares. Él diseña sistemas complejos, aunque mucho del trabajo pesado consiste en verificar y validar. El grupo de trabajo de Martin intenta reducir el costo y tiempo de este trabajo con la computación cuántica.
 
 El D-Wave que compró Martin, cabe destacar que fue el primer D-Wave comercialmente disponible, está en el Instituto de Ciencias de la Información de la Universidad del Sur de California. Este instituto está posicionado a la cabeza de la investigación en computación cuántica.
 
@@ -390,9 +390,6 @@ Nos atrevemos a decir que, la gran mayoría de la tecnología humana, sino toda,
 \clearpage
 \begin{thebibliography}{X}
 \index{Referencias}
-\bibitem{etiqueta} \textsc{Autor, A.} (año). \textit{Título del libro.} Lugar: Editorial
-\bibitem{revistaonline} \textsc{Autor, A.} (año). Título del artículo. \textit{Revista}, n, pp. doi: (o recuperado de)
-\bibitem{periodico} \textsc{Autor, A.} (año). Título de la notica. \textit{Periodico} Recuperado de
 \bibitem{aczel} \textsc{Aczel, A.} (año). \textit{ENTANGLEMENT The Greatest Mystery in Physics.} New York: Four Wall Eight Windows
 \bibitem{arce} \textsc{Arce, C., Castillo, W., González, J.} (2003). \textit{Álgebra Lineal.} Lugar: Editorial
 \bibitem{bouwmeester} \textsc{Bouwmeester, D., Pan J., Mattle K., Eibl M., Weinfurter H., Zeilinger A.} (1997). Experimental quantum teleportation. \textit{Nature}, 390, 575-579. doi:10.1038/37539
